--- a/crc-app/frontend/src/components/TrainingItem/TrainingItem.scss
+++ b/crc-app/frontend/src/components/TrainingItem/TrainingItem.scss
@@ -31,8 +31,8 @@
     max-width: 150px;
     max-height: 150px;
     min-height: 120px;
-    object-fit: contain;
-    padding: 20px;
+    min-width: none;
+    padding-top: 10px;
     border-radius: 8px;
     transition: 0.3s ease-in-out;
   }
