--- a/crc-app/frontend/src/components/UserTrainings/UserTrainingsComp.scss
+++ b/crc-app/frontend/src/components/UserTrainings/UserTrainingsComp.scss
@@ -29,6 +29,12 @@
         color: $yellow;
       }
     }
+
+    .no-loader {
+      position: absolute;
+      top: 45%;
+      left: 45%;
+    }
   }
 
   .left-new-training {
